--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "daisyui": "^2.51.6",
     "vite-plugin-mkcert": "^1.15.0",
     "vue": "^3.2.47"
   },
