--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mysten/sui.js": "^0.35.1",
     "daisyui": "^2.51.6",
+    "pinia": "^2.1.3",
     "vite-plugin-mkcert": "^1.15.0",
     "vue": "^3.2.47"
   },
